# graphics

./: .dir-locals.el  .gitignore  LICENSE  Main.hs  Makefile  Pair.hs  Pbm.hs  README.md  TODO.md  graphics.cabal  script.mdl  stack.yaml
app/: GenerateFile.hs  Main.hs  MakeFile.hs
bench/: Bench.hs
lib/: Line.hs  Pair.hs  Pbm.hs  Picture.hs  Pixel.hs  Point.hs
src/: .gitignore  Angle.hs  Color.hs  D2Point.hs  EdgeMatrix.hs  Forking.hs  Line.hs  MDL.x  Matrix.hs  Pair.hs  Parametric.hs  Parser.hs  Pbm.hs  Picture.hs  Pixel.hs  Point.hs  Shapes.hs  Utils.hs  Vectors.hs
src/Data/: Color.hs  D2Point.hs  D3Point.hs  Lighting.hs  Matrix.hs  Pair.hs  Picture.hs
src/Data/Matrix/: Base.hs  EdgeMatrix.hs  Mult.hs  PointMatrix.hs  Points.hs  PolyMatrix.hs  PolyMatrix.hs-boot  ShapeMatrix.hs  Transform.hs
src/Data/Pair/: Pair.hs  Triple.hs  Vector.hs
src/Data/Picture/: Drawing.hs  Gen.hs  Output.hs  Picture.hs
src/Data/Picture/Drawing/: Lighting.hs  Line.hs  Points.hs  ScanLine.hs  ShapeMatrix.hs  Shapes.hs
src/Data/Picture/Drawing/ShapeMatrix/: EdgeMatrix.hs  PointMatrix.hs  PolyMatrix.hs  PolyMatrix.hs-boot  ShapeMatrix.hs
src/Data/Picture/Output/: Pbm.hs
src/Language/: MDL.hs
src/Language/MDL/: Expr.hs  Interp.hs  Lexer.x  Parser.info  Parser.y  SymTab.hs  Syntax.hs  Tokens.hs
src/Language/MDL/Interp/: Eval.hs  Interp.hs  InterpState.hs
src/Matrix/: Base.hs  D3Point.hs  Drawable.hs  EdgeMatrix.hs  Mult.hs  PointMatrix.hs  PolyMatrix.hs  ShapeMatrix.hs  Transform.hs
src/Pair/: Pair.hs  Triple.hs  Vector.hs
src/Parser/: Interp.hs  Parser.hs
