name:                graphics
version:             0.1.0.0
synopsis:            Graphics library for MCS66C
description:         Graphics library for MCS66C
homepage:            http://github.com/jbaum98/graphics#readme
license:             BSD3
license-file:        LICENSE
author:              Jake Waksbaum
maintainer:          jake.waksbaum@gmail.com
copyright:           (c) 2016 Jake Waksbaum
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Line, Pbm, Picture, Color, D2Point, Pair, Utils, Matrix, Language.MDL
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && < 1
                     , bytestring >= 0.10 && < 1
                     , bytestring-read >= 0.3.1 && < 2
                     , deepseq >= 1.4 && < 2
                     , array >= 0.5 && < 1
                     , mtl >= 2.2 && < 3
                     , vector >= 0.11 && < 1
                     , loop >= 0.3 && < 1
                     , dlist >= 0.7 && < 1
                     , temporary >= 1.2 && < 2
                     , filepath >= 1.4 && < 2
                     , unix >= 2.7 && < 3
  other-modules:       Matrix.Base
                       Matrix.Mult
                       Matrix.Transform
                       Matrix.ShapeMatrix
                       Matrix.EdgeMatrix
                       Matrix.PointMatrix
                       Matrix.PolyMatrix
                       Matrix.D3Point
                       Language.MDL.Parser
                       Language.MDL.Lexer
                       Language.MDL.Tokens
                       Language.MDL.Expr
                       Language.MDL.SymTab
                       Language.MDL.Interp
                       Language.MDL.Interp.Interp
                       Language.MDL.Interp.Eval
                       Language.MDL.Interp.InterpState
                       Angle
                       Shapes
                       Pair.Pair
                       Pair.Triple
                       Pair.Vector
  default-language:    Haskell2010
  build-tools: alex, happy

executable graphics-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts
  build-depends:       base
                     , graphics
                     , bytestring >= 0.10
  default-language:    Haskell2010

test-suite graphics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , graphics
  ghc-options:         -O2 -threaded -rtsopts
  default-language:    Haskell2010

benchmark graphics-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      app, bench
  main-is:             Bench.hs
  ghc-options:         -O2 -threaded -rtsopts
  build-depends:       base
                     , graphics
                     , criterion
                     , temporary
                     , directory
                     , deepseq
  other-modules:       GenerateFile
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/jbaum98/graphics
